# moonshine.cpp

./: .gitignore  CMakeLists.txt  README.md
python/: convert-h5-to-ggml.py
src/: common-whisper.cpp  common-whisper.h  main.cpp  whisper-arch.h  whisper.cpp  whisper.h
